<resources>
    <string name="app_name">Lister</string>
    <string name="shopping_lists_title">SHOPPING LISTS</string>
    <string name="add">+</string>
    <string name="list_name_prompt">ENTER LIST NAME</string>
    <string name="edit_list">EDIT LIST</string>
    <string name="delete">DELETE</string>
    <string name="currentnameoflist">currentNameOfList</string>
    <string name="enterButton"><![CDATA[>]]></string>
    <string name="item_name">item name</string>
    <string name="default_price">0.00</string>
    <string name="default_count">1</string>
    <string name="camera_button_description">Opens camera for scanning prices</string>
    <string name="defaultTotalPrice">$0.00</string>
</resources>