<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editListOfList"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:background="#706F6F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editListName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:hint="@string/currentnameoflist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editListScreenTitle" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editListName" />

        <Button
            android:id="@+id/enterButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:text="@string/enterButton"
            app:layout_constraintBottom_toBottomOf="@+id/editListName"
            app:layout_constraintEnd_toEndOf="@+id/editListName"
            app:layout_constraintTop_toTopOf="@+id/editListName" />

        <TextView
            android:id="@+id/editListScreenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_list"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
